# nextjs-fastapi-starter

./: LICENSE  README.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vercel.json
.github/: RELEASE_TEMPLATE.md
.github/workflows/: deploy.yml
api/: index.py
app/: layout.tsx
app/api/chat/: route.ts
app/og/: route.tsx
backend/: pyproject.toml  requirements.txt
backend/cline_agent/: __init__.py  cli.py  config.py  logging_config.py
backend/cline_agent/agent/: core.py
backend/cline_agent/llm/: providers.py
backend/cline_agent/tools/: file_system.py  git_tool.py  mcp_client.py  reflection_auditor.py  safety_auditor.py  schemas.py
components/: multimodal-input.tsx  preview-attachment.tsx
components/ui/: input.tsx
