[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cline-agent"
version = "1.0.0"
description = "Terminal-first autonomous coding agent with safety, reflection, and shadcn/ui tool support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["ai-agent", "coding-agent", "llm", "terminal", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9",
    "structlog>=23.1",
    "openai>=1.0,<2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "requests>=2.28",
    "httpx>=0.25",
    "aiofiles>=23.0",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "black>=23.0"]

[project.scripts]
cline-agent = "api.cline_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["api/cline_agent"]
